--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@property --border-angle {
+	inherits: false;
+	initial-value: 0deg;
+	syntax: "<angle>";
+}
+
 @theme {
 	--font-sans: "Inter", sans-serif;
 	--shadow-shape:
@@ -23,4 +29,11 @@
 		), inset 0px 0px 0px 1px rgba(255, 255, 255, 0.02);
 	--opacity-2: 0.02;
 	--text-xxs: 0.625rem;
+	--animate-border: border 2s linear infinite;
+
+	@keyframes border {
+		to {
+			--border-angle: 360deg;
+		}
+	}
 }
